# peticle

./: .gitignore  .replit  .vercelignore  DEPLOYMENT_CHECKLIST.md  SIZE_OPTIMIZATION.md  VERCEL_DEPLOYMENT.md  pyproject.toml  replit.md  requirements.txt  vercel.json
api/: index.py
app/: config.py  database.py  main.py  requirements.txt
app/models/: pet.py  user.py  video.py
app/routes/: pets.py  routes.py  shop.py  videos.py
app/schemas/: pet.py  video.py
app/services/: ai_analysis.py  storage.py  video_processor.py
app/storage/: json_repository.py
data/: pets.json
frontend/: .vercelignore  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.jsx  page.jsx
frontend/src/app/analysis/: page.jsx
frontend/src/app/dashboard/: page.jsx
frontend/src/app/pets/[id]/: page.jsx
frontend/src/app/pets/new/: page.jsx
frontend/src/app/shop/: page.jsx
frontend/src/app/vets/: page.jsx
frontend/src/components/: Navbar.jsx  PetCard.jsx  PetProfile.jsx  ShopSection.jsx  VetLocator.jsx  VideoUploader.jsx
frontend/src/lib/: api.js  store.js
frontend/src/styles/: globals.css
