[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "passlib>=1.7.4",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
